tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:47:16
   |
47 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:48:17
   |
48 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:49:5
   |
49 |     concat(concat(left, [|value|]), right)
   |     ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:57:40
   |
57 |     parse_pattern_bits(inner, idx + 1, push(acc, bit))
   |                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:85:50
   |
85 |         parse_buttons_rec(line, close + 1, stop, push(acc, btn))
   |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_haskell_style.flx:102:23
    |
102 |     zeros(n, idx + 1, push(acc, 0))
    |                       ^^^^

Hint:
  Define it first: let push = ...;

Found 6 errors.
== stdout ==
<not executed>
